# pleiades

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
pleiades/: Cargo.toml
pleiades/src/: buffer.rs  color.rs  led_matrix.rs  lib.rs  main.rs  world.rs  ws2812.rs
pleiades/src/world/: empty.rs  fire.rs  matrix.rs  northen_light.rs  solid.rs  starry_night.rs  voronoi.rs
pleiades_macro_derive/src/: lib.rs
src/: apds9960.rs  buffer.rs  lib.rs  main.rs  perlin.rs
src/world/: empty.rs  fire.rs  matrix.rs  mod.rs  northen_light.rs  northern_light.rs  solid.rs  starry_night.rs  utils.rs  voronoi.rs
