[package]
name = "pleiades"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.8.0", features = [] }
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.1", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.10.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embedded-io = { version = "0.7.1", features = [] }
embedded-hal-async = "1.0.0"
atomic-polyfill = "1.0.3"

defmt = "1.1.1"
defmt-rtt = "1.3.0"
panic-probe = { version = "1.0", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
futures = { version = "0.3.33", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
pio-proc = "0.3"
pio = "0.3.0"
heapless = "0.9.3"
smart-leds = "0.4.0"
fixed = "1.31.0"
fixed-macro = "1.2"
rand = { version = "0.9.0", default-features = false }
micromath = "2.1.0"
ledlab = { git = "https://github.com/exor2008/ledlab" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[features]
default = ["panic-probe"]
panic-reset = ["dep:panic-reset"]
panic-probe = ["dep:panic-probe"]

[[bin]]
name = "pleiades"
path = "src/main.rs"
test = false
doctest = false
bench = false
