[package]
name = "pleiades"
version = "0.1.0"
edition = "2024"

[dependencies]
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
embassy-net = { version = "0.4.0", features = [
  "defmt",
  "tcp",
  "dhcpv4",
  "medium-ethernet",
] }
embassy-sync = { version = "0.5.0", features = [] }
embassy-executor = { version = "0.5.0", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
] }
embedded-io = { version = "0.6.1", features = [] }
embedded-hal-async = "1.0.0"
atomic-polyfill = "1.0.3"

defmt = "0.3"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
pio-proc = "0.2"
pio = "0.2.1"
heapless = "0.8.0"
smart-leds = "0.4.0"
fixed = "1.23.1"
fixed-macro = "1.2"
rand = { version = "0.8.5", default-features = false }
micromath = "2.1.0"
pleiades_macro_derive = { path = "../pleiades_macro_derive" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[features]
default = ["panic-probe"]
panic-reset = ["dep:panic-reset"]
panic-probe = ["dep:panic-probe"]

[[bin]]
name = "pleiades"
path = "src/main.rs"
test = false
doctest = false
bench = false
